get infosystems from harvester

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port=8080
-infosystems.url=https://raw.githubusercontent.com/e-gov/RIHA-API/master/riha_live.json
+infosystems.url=http://localhost:8081/infosystems/
