--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port=8080
-infosystems.url=http://localhost:8081/systems.json
+infosystems.url=http://heroku-publisher.herokuapp.com/systems.json
