--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,9 @@
 		<jetty.version>9.2.17.v20160517</jetty.version>
 	</properties>
 
+	
+
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -37,6 +40,11 @@
     	<version>3.5</version>
 	</dependency>
 
+	<dependency>
+    	<groupId>commons-codec</groupId>
+    	<artifactId>commons-codec</artifactId>
+    	<version>1.9</version>
+	</dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
