--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 server.port=8080
 infosystems.url=http://localhost:8081/systems.json
+
+#authentication fields
+#HTTP header field to fetch the client personal certificate
+personalCertificateHeaderField=SSL_CLIENT_S_DN
+
+#ID card auth URL
+idCardAuthUrl=https://localhost/login
