--- a/src/test/resources/test_application.properties
+++ b/src/test/resources/test_application.properties
@@ -11,7 +11,7 @@ idCardAuthUrl=https://localhost/login
 
 #LDAP configuration
 ldap.host=localhost
-ldap.port=8389
+ldap.port=8489
 ldap.baseDn=dc=springframework,dc=org
 #ENDOF LDAP configuration
 
@@ -28,6 +28,10 @@ ldap.auth.groupSearchBase=ou=groups
 ldap.auth.userSearchFilter=uid={0}
 #ENDOF LDAP auth
 
+#Embedded ldap server
+spring.ldap.embedded.ldif=classpath:test-server.ldif
+spring.ldap.embedded.base-dn=dc=springframework,dc=org
+spring.ldap.embedded.port=8489
 
 logging.level.org.springframework.security: INFO
 logging.level.org.springframework.boot.actuate.audit.listener.AuditListener: DEBUG
