--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ language: java
 jdk:
   - oraclejdk8
 
+notifications:
+  email: false
+
 before_script:
         - npm install karma-jasmine karma-junit-reporter karma-jasmine-jquery karma-jasmine-ajax karma-coverage karma-phantomjs2-launcher 
