added ldap.login and ldap.password configuration properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,21 +11,25 @@ idCardAuthUrl=https://localhost/login
 
 #LDAP configuration
 ldap.host=localhost
-ldap.port=8389
-ldap.baseDn=dc=springframework,dc=org
+ldap.port=389
+ldap.login=
+ldap.password=
+ldap.baseDn=DC=kodu,DC=aed
 #ENDOF LDAP configuration
 
 
 
 #LDAP auth configuration
 #User search base (relative to ldap.baseDn)
-ldap.auth.userSearchBase=ou=people
+ldap.auth.userSearchBase=ou=People
 
 #Group search base (needed for ROLE assignment)
-ldap.auth.groupSearchBase=ou=groups
+ldap.auth.groupSearchBase=ou=Groups
+# user role is based on the value of this attribute + ROLE_ prefix
+ldap.auth.groupRoleAttribute=ou
 
 #Search filter (how do we find users from LDAP)
-ldap.auth.userSearchFilter=uid={0}
+ldap.auth.userSearchFilter=pager={0}
 #ENDOF LDAP auth
 
 
