--- a/src/test/resources/test_application.properties
+++ b/src/test/resources/test_application.properties
@@ -10,22 +10,27 @@ idCardAuthUrl=https://localhost/login
 
 
 #LDAP configuration
+
 ldap.host=localhost
 ldap.port=8489
+#ldap.login=XXX
+#ldap.password=XXX
 ldap.baseDn=dc=springframework,dc=org
+
 #ENDOF LDAP configuration
 
 
 
 #LDAP auth configuration
 #User search base (relative to ldap.baseDn)
-ldap.auth.userSearchBase=ou=people
+ldap.auth.userSearchBase=ou=People
 
 #Group search base (needed for ROLE assignment)
-ldap.auth.groupSearchBase=ou=groups
+ldap.auth.groupSearchBase=ou=Groups
+ldap.auth.groupRoleAttribute=ou
 
 #Search filter (how do we find users from LDAP)
-ldap.auth.userSearchFilter=uid={0}
+ldap.auth.userSearchFilter=pager={0}
 #ENDOF LDAP auth
 
 #Embedded ldap server
@@ -34,4 +39,6 @@ spring.ldap.embedded.base-dn=dc=springframework,dc=org
 spring.ldap.embedded.port=8489
 
 logging.level.org.springframework.security: INFO
+logging.level.org.springframework.security.ldap: DEBUG
+logging.level.org.springframework.ldap: DEBUG
 logging.level.org.springframework.boot.actuate.audit.listener.AuditListener: DEBUG
