--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+	<repositories>
+		<repository>
+			<id>ria-artifactory</id>
+			<url>http://ftp.aso.ee/pub/artifactory/RIHA-libs-release-local</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
