--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 server.port=8084
 
 approver.storageClient.baseUrl=http://localhost:8080/riha-storage/api
+
+# Serialization
+## Use full date
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.timeZone=Europe/Tallinn
+spring.jackson.dateFormat=yyyy-MM-dd'T'HH:mm:ss.SSSZ
