--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
 		</dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.7.0</version>
+        </dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -72,6 +77,35 @@
 					<executable>true</executable>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>com.github.kongchen</groupId>
+                <artifactId>swagger-maven-plugin</artifactId>
+                <version>3.1.5</version>
+                <configuration>
+                    <apiSources>
+                        <apiSource>
+                            <springmvc>true</springmvc>
+                            <info>
+                                <title>RIHA-Approver API</title>
+                                <version>v1</version>
+                                <description>API for RIHA info system approvals</description>
+                                <license>
+                                    <name>MIT</name>
+                                </license>
+                            </info>
+                            <schemes>
+                                <scheme>http</scheme>
+                            </schemes>
+                            <basePath>/</basePath>
+                            <locations>
+                                <location>ee.ria.riha.web</location>
+                            </locations>
+                            <swaggerDirectory>${basedir}/src/main/resources/static</swaggerDirectory>
+                            <outputFormats>yaml</outputFormats>
+                        </apiSource>
+                    </apiSources>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 </project>
