RIHAKB-247. Enable CORS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ server.port=8084
 
 approver.storageClient.baseUrl=http://localhost:8080/riha-storage/api
 
+approver.security.cors.allowedOrigins=*
+
 # Serialization
 ## Use full date
 spring.jackson.serialization.write-dates-as-timestamps=false
